--- a/JavaScript/base/ES6_Study/package.json
+++ b/JavaScript/base/ES6_Study/package.json
@@ -27,6 +27,7 @@
     "gulp-sequence": "^0.4.6",
     "gulp-uglify": "^2.1.0",
     "gulp-util": "^3.0.8",
+    "jquery": "^3.2.1",
     "require-dir": "^0.3.1",
     "vinyl-named": "^1.1.0",
     "webpack": "^2.2.1",
