--- a/JavaScript/base/ES6_Study/server/package.json
+++ b/JavaScript/base/ES6_Study/server/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "mockjs": "^1.0.1-beta3",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2"
   }
