--- a/wechatApp/movieWeekly/app.json
+++ b/wechatApp/movieWeekly/app.json
@@ -1,6 +1,23 @@
 {
   "pages": [
-    "pages/weekly/weekly",
-    "pages/about/about"
-  ]
+    "pages/about/about",
+    "pages/weekly/weekly"
+  ],
+  "tabBar": {
+    "list": [{
+      "pagePath": "pages/weekly/weekly",
+      "text": "每周推荐",
+      "iconPath": "images/icons/weekly.png",
+      "selectedIconPath": "images/icons/weekly-selected.png"
+    },
+    {
+      "pagePath": "pages/about/about",
+      "text": "关于",
+      "iconPath": "images/icons/about.png",
+      "selectedIconPath": "images/icons/about-selected.png"
+    }
+    ],
+    "color": "#000",
+    "selectedColor": "#00f"
+  }
 }
